data/derived/sp14/progs/unify/prog4481.ml.out
Characters 75-79:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b -> 'c
